adds external access to nodes

--- a/charts/sock-shop/templates/payment-dep.yaml
+++ b/charts/sock-shop/templates/payment-dep.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   selector:
     matchLabels:
-      name: paymnent
+      name: payment
   replicas: 1
   template:
     metadata:
